--- a/app.yaml
+++ b/app.yaml
@@ -1,1 +1,12 @@
-runtime: nodejs10
+runtime: php55
+api_version: 1
+threadsafe: true
+
+handlers:
+- url: /
+  static_files: build/index.html
+  upload: build/index.html
+
+- url: /(.*)
+  static_files: build/\1
+  upload: build/(.*)
